correccion pwa movil

--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -102,4 +102,7 @@
       <p>&copy; 2025 Tarjeta Digital. Todos los derechos reservados.</p>
     </div>
   </footer> -->
+
+  <!-- PWA Install Component -->
+  <app-pwa-install></app-pwa-install>
 </div>
