boton cambiar tarjeta

--- a/src/app/components/digital-card-tres/digital-card-tres.component.html
+++ b/src/app/components/digital-card-tres/digital-card-tres.component.html
@@ -584,4 +584,9 @@
       </div>
     </div>
   </div>
+
+  <!-- Floating Change Card Button -->
+  <div class="absolute top-4 right-4">
+    <app-cambiar-tarjeta [currentSlug]="currentSlug"></app-cambiar-tarjeta>
+  </div>
 </div>
