--- a/src/app/components/digital-card/digital-card.component.html
+++ b/src/app/components/digital-card/digital-card.component.html
@@ -722,4 +722,10 @@
       </div>
     </div>
   </div>
+
+</div>
+
+<!-- Floating Change Card Button - Outside the card -->
+<div class="fixed top-4 right-4 z-[9999]">
+  <app-cambiar-tarjeta [currentSlug]="currentSlug"></app-cambiar-tarjeta>
 </div>
