--- a/src/app/components/futuristic-card/futuristic-card.component.html
+++ b/src/app/components/futuristic-card/futuristic-card.component.html
@@ -32,7 +32,7 @@
 <!-- Futuristic Card Container -->
 <div
   *ngIf="displayData() && (!isLoading || cardData) && !error"
-  class="futuristic-container"
+  class="futuristic-container relative"
   [class.glitch-active]="glitchActive"
 >
   <!-- Main Futuristic Card -->
@@ -283,4 +283,10 @@
   <div class="matrix-rain">
     <div class="rain-drop" *ngFor="let drop of [1,2,3,4,5,6,7,8,9,10]; trackBy: trackByDrop"></div>
   </div>
+
+</div>
+
+<!-- Floating Change Card Button - Outside the card -->
+<div class="fixed top-4 right-4 z-[9999]">
+  <app-cambiar-tarjeta [currentSlug]="currentSlug"></app-cambiar-tarjeta>
 </div>
